# fregion

./: Cargo.toml  LICENSE  README.md
data/: cities.json  countries.json  districts.json  provinces.json  streets.json
scripts/: generate_region_data.py
src/: cli.rs  main.rs
src/handlers/: mod.rs  region.rs
src/models/: mod.rs  region.rs
src/routes/: mod.rs
