[package]
name = "fregion"
version = "0.1.0"
edition = "2021"
description = "A region-based API service powered by Axum"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-br", "compression-gzip", "request-id", "catch-panic"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
